--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,5 +20,9 @@
             android:id="@+id/nav_scanner"
             android:icon="@drawable/ic_baseline_qr_code_scanner_24"
             android:title="Scanner" />
+        <item
+            android:id="@+id/nav_recycler"
+            android:icon="@drawable/ic_baseline_list_24"
+            android:title="My Products" />
     </group>
 </menu>
