#2 Create the Navigation Drawer and Icon for the Welcome Page and allow Mobile Navigation Added the WelcomePage Fragment to mobile navigation, and created a drawer and an icon for it in the navigation drawer

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_welcome">
 
     <fragment
         android:id="@+id/nav_home"
@@ -32,4 +32,9 @@
         android:name="com.example.arbitragetracker.productRecycler.ProductRecycler"
         android:label="My Products"
         tools:layout="@layout/fragment_product_recycler" />
+    <fragment
+        android:id="@+id/nav_welcome"
+        android:name="com.example.arbitragetracker.welcomePage.Welcome"
+        android:label="Welcome!"
+        tools:layout="@layout/fragment_welcome" />
 </navigation>
