--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,6 +17,10 @@
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
         <item
+            android:id="@+id/nav_welcome"
+            android:icon="@drawable/ic_baseline_home_24"
+            android:title="@string/welcomeDrawer" />
+        <item
             android:id="@+id/nav_scanner"
             android:icon="@drawable/ic_baseline_qr_code_scanner_24"
             android:title="Scanner" />
