--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -45,7 +45,20 @@
                 android:layout_margin="5sp"
                 android:text="@string/welcomeContent"
                 android:textColor="@color/black"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/webLinkOne"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10sp"
+                android:backgroundTint="@color/black"
+                android:text="@string/webLinkIntent"
+                android:textColor="@color/white"
+                android:textColorHighlight="#FFEB3B"
+                android:textColorLink="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
     </ScrollView>
