--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -29,6 +29,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:backgroundTint="#8BC3EF"
+        app:srcCompat="@drawable/ic_baseline_playlist_add_24" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
