--- a/app/src/main/res/drawable/customcircle.xml
+++ b/app/src/main/res/drawable/customcircle.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/white" />
+            <solid android:color="#F83838" />
             <size android:height="20dp"
                 android:width="20dp"/>
         </shape>
