#5 Create a drawer with a name and icon for the Stats screen Created the navigation drawer for the stats page with an icon, and modified mobile navigation to allow for a destination

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -28,5 +28,10 @@
             android:id="@+id/nav_recycler"
             android:icon="@drawable/ic_baseline_list_24"
             android:title="My Products" />
+        <item
+            android:id="@+id/nav_stats"
+            android:icon="@drawable/ic_baseline_query_stats_24"
+            android:title="Statistics"
+            />
     </group>
 </menu>
