#10 Apply ViewPager2 animation/styles for the Statistics Screen Added a DepthTransformer to the Stats ViewPager to add animations into it

--- a/app/src/main/res/layout/fragment_view_pager_host.xml
+++ b/app/src/main/res/layout/fragment_view_pager_host.xml
@@ -13,10 +13,13 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
         android:textStyle="bold"
+        app:tabTextColor="#4CAF50"
         app:tabIconTint="@color/white" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vpHost"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="#D5D0D0"
+        />
 </LinearLayout>
