#12 -Uppdated the theme of the app to look cleaner. -Created dark and light themes. -Not all colors work perfectly on both themes

--- a/app/src/main/res/layout/fragment_product_recycler.xml
+++ b/app/src/main/res/layout/fragment_product_recycler.xml
@@ -9,7 +9,7 @@
         android:id="@+id/productRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layoutAnimation="@anim/layout_anim"
-        />
+        android:background="?attr/colorPrimarySurface"
+        android:layoutAnimation="@anim/layout_anim" />
 
 </FrameLayout>
