--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.ArbitrageTracker.PopupOverlay" />
+            app:popupTheme="@style/Theme.ArbitrageTracker.PopupOverlay"
+            app:titleTextColor="?attr/colorOnPrimary" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -29,7 +30,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
-        app:backgroundTint="#8BC3EF"
+        app:backgroundTint="@color/theme_red"
         app:srcCompat="@drawable/ic_baseline_playlist_add_24" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
