--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@color/theme_offwhite"
     android:fillViewport="true"
     android:orientation="vertical"
     tools:context=".ProductDetailsFragment">
@@ -13,6 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:background="?attr/colorPrimary"
         android:orientation="vertical">
 
         <ImageView
@@ -38,6 +39,7 @@
             android:paddingHorizontal="30dp"
             android:text="TextView"
             android:textAlignment="center"
+            android:textColor="@color/theme_textblack"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -54,16 +56,16 @@
             android:fontFamily="@font/alegreya_sans"
             android:paddingHorizontal="30dp"
             android:text="TextView"
+            android:textColor="@color/theme_textblack"
             android:textSize="16sp"
             app:colorClickableText="#292929"
-            app:trimCollapsedText="@string/read_more"
-            app:trimExpandedText="@string/read_less"
-            app:trimLength="200"
-            app:trimMode="trimModeLength"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailName"
-            />
+            app:trimCollapsedText="@string/read_more"
+            app:trimExpandedText="@string/read_less"
+            app:trimLength="200"
+            app:trimMode="trimModeLength" />
 
         <TextView
             android:id="@+id/detailPrice"
@@ -72,6 +74,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/alegreya_sans"
             android:text="TextView"
+            android:textColor="@color/theme_textblack"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -106,9 +109,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:backgroundTint="#E64C4C"
+            android:backgroundTint="@color/theme_blue"
             android:text="Add to inventory"
+            android:textColor="@color/white"
             app:icon="@drawable/ic_baseline_playlist_add_24"
+            app:iconTint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -120,7 +125,7 @@
             android:layout_marginEnd="70dp"
             android:layout_marginBottom="24dp"
             android:background="#FFFFFF"
-            android:backgroundTint="#9FA0AA"
+            android:backgroundTint="@color/theme_blue"
             android:gravity="center"
             android:text="Price Unavailable"
             android:textAlignment="center"
