--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/theme_offwhite"
     android:orientation="vertical"
     tools:context=".statistics.StatisticsFragment">
 
@@ -12,12 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50sp"
-        android:background="#4CAF50"
-        android:fontFamily="serif"
+        android:background="@color/theme_green"
+        android:fontFamily="sans-serif-medium"
         android:text="Statistic Title"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="@color/black"
+        android:textColor="@color/theme_textblack"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -32,11 +33,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10sp"
-        android:fontFamily="serif"
+        android:fontFamily="sans-serif-medium"
         android:text="Statistic Value"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="@color/black"
+        android:textColor="?attr/colorOnPrimary"
         android:textSize="28sp"
         android:textStyle="bold" />
 </LinearLayout>
