--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#D5D0D0">
+        android:background="?attr/colorPrimary">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,12 +21,12 @@
                 android:id="@+id/welcomeTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#4CAF50"
-                android:fontFamily="serif"
+                android:background="@color/theme_green"
+                android:fontFamily="sans-serif-medium"
                 android:text="@string/welcomeTitle"
                 android:textAlignment="center"
                 android:textAllCaps="false"
-                android:textColor="@color/black"
+                android:textColor="@color/theme_textblack"
                 android:textSize="30sp"
                 android:textStyle="bold" />
 
@@ -43,8 +43,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5sp"
+                android:fontFamily="sans-serif-medium"
                 android:text="@string/welcomeContent"
-                android:textColor="@color/black"
+                android:textColor="?attr/colorOnPrimary"
                 android:textSize="18sp" />
 
             <Button
@@ -52,10 +53,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10sp"
-                android:backgroundTint="@color/black"
+                android:backgroundTint="@color/theme_red"
                 android:text="@string/webLinkIntent"
-                android:textColor="@color/white"
-                android:textColorHighlight="#FFEB3B"
+                android:textColor="?attr/colorOnSecondary"
                 android:textColorLink="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold" />
