-Made some changes to the ui

--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -35,11 +35,11 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
-            android:fontFamily="@font/alegreya_sans"
+            android:fontFamily="@font/poppins"
             android:paddingHorizontal="30dp"
             android:text="TextView"
             android:textAlignment="center"
-            android:textColor="@color/theme_textblack"
+            android:textColor="?attr/colorOnPrimary"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,12 +53,12 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
-            android:fontFamily="@font/alegreya_sans"
+            android:fontFamily="@font/poppins"
             android:paddingHorizontal="30dp"
             android:text="TextView"
-            android:textColor="@color/theme_textblack"
+            android:textColor="?attr/colorOnPrimary"
             android:textSize="16sp"
-            app:colorClickableText="#292929"
+            app:colorClickableText="#101010"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailName"
@@ -72,44 +72,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/alegreya_sans"
+            android:fontFamily="@font/poppins"
             android:text="TextView"
-            android:textColor="@color/theme_textblack"
-            android:textSize="16sp"
+            android:textColor="?attr/colorOnPrimary"
+            android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailDescription" />
-
-        <ImageView
-            android:id="@+id/detailStatBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/customcircle"
-            android:padding="8dp"
-            android:src="@drawable/ic_baseline_stacked_line_chart_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/detailEditBtn" />
-
-        <ImageView
-            android:id="@+id/detailEditBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/customcircle"
-            android:padding="8dp"
-            android:src="@drawable/ic_baseline_edit_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
             android:id="@+id/addToInvBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:backgroundTint="@color/theme_blue"
+            android:backgroundTint="?attr/colorAccent"
+            android:fontFamily="@font/poppins"
             android:text="Add to inventory"
             android:textColor="@color/white"
             app:icon="@drawable/ic_baseline_playlist_add_24"
@@ -123,17 +101,18 @@
             android:layout_height="65dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="70dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="28dp"
             android:background="#FFFFFF"
-            android:backgroundTint="@color/theme_blue"
+            android:backgroundTint="?attr/colorOnSecondary"
+            android:fontFamily="@font/poppins"
             android:gravity="center"
             android:text="Price Unavailable"
             android:textAlignment="center"
-            android:textColor="#FFFFFF"
+            android:textColor="?attr/colorPrimaryVariant"
             android:textSize="16sp"
             android:textStyle="bold"
             app:icon="@drawable/ic_baseline_launch_24"
-            app:layout_constraintBottom_toTopOf="@+id/detailStatBtn"
+            app:layout_constraintBottom_toTopOf="@+id/addToInvBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailPrice"
             app:toggleCheckedStateOnClick="false" />
