--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="theme_offwhite">#f4f1de</color>
-    <color name="theme_red">#e07a5f</color>
+    <color name="theme_red">#B23A48</color>
     <color name="theme_blue">#3d405b</color>
     <color name="theme_green">#81b29a</color>
     <color name="theme_yellow">#f2cc8f</color>
