--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -30,7 +30,9 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
-        app:backgroundTint="?attr/colorAccent"
-        app:srcCompat="@drawable/ic_baseline_playlist_add_24" />
+        app:fabSize="normal"
+        app:tint="@null"
+        app:srcCompat="@drawable/ic_baseline_playlist_add_24"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
