--- a/app/src/main/res/layout/fragment_product_recycler.xml
+++ b/app/src/main/res/layout/fragment_product_recycler.xml
@@ -23,16 +23,37 @@
     <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
     <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/filter2"
+        android:id="@+id/filter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Switch"
+        android:defaultFocusHighlightEnabled="true"
+        android:fontFamily="@font/poppins"
+        android:text="ACTIVE LISTINGS"
         android:textColor="?attr/colorOnPrimary"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/productRecycler"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/inventoryEmptyTextView"
+        android:layout_width="342dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="82dp"
+        android:fontFamily="@font/poppins"
+        android:text="Looks like your inventory is empty! Scan An item to start..."
+        android:textAlignment="center"
+        android:textColor="?attr/colorOnPrimary"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
