--- a/app/src/main/res/layout/fragment_scanner.xml
+++ b/app/src/main/res/layout/fragment_scanner.xml
@@ -13,6 +13,7 @@
         android:layout_height="215dp"
         android:layout_marginTop="200dp"
         android:backgroundTint="@color/theme_red"
+        android:fontFamily="@font/poppins"
         android:text="Scan"
         android:textColor="?attr/colorOnSecondary"
         android:textSize="34sp"
@@ -29,6 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
+        android:fontFamily="@font/poppins"
         android:text="Manually enter barcode"
         android:textColor="?attr/colorOnPrimary"
         android:textSize="16sp"
@@ -55,6 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:backgroundTint="@color/theme_green"
+        android:fontFamily="@font/poppins"
         android:text="Add"
         android:textColor="?attr/colorOnSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
