--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/theme_green"
-                android:fontFamily="sans-serif-medium"
+                android:fontFamily="@font/poppins"
                 android:text="@string/welcomeTitle"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -43,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5sp"
-                android:fontFamily="sans-serif-medium"
+                android:fontFamily="@font/poppins"
                 android:text="@string/welcomeContent"
                 android:textColor="?attr/colorOnPrimary"
                 android:textSize="18sp" />
@@ -54,6 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10sp"
                 android:backgroundTint="@color/theme_red"
+                android:fontFamily="@font/poppins"
                 android:text="@string/webLinkIntent"
                 android:textColor="?attr/colorOnSecondary"
                 android:textColorLink="@color/white"
@@ -65,6 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:fontFamily="@font/poppins"
                 android:hint="@string/phoneHint"
                 android:inputType="textPersonName|phone"
                 android:minHeight="48dp"
@@ -76,6 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10sp"
                 android:backgroundTint="@color/theme_red"
+                android:fontFamily="@font/poppins"
                 android:text="@string/textIntent"
                 android:textColor="?attr/colorOnSecondary"
                 android:textColorLink="@color/white"
