--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.ArbitrageTracker" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/theme_blue</item>
-        <item name="colorPrimaryVariant">#7479A1</item>
+        <item name="colorPrimaryVariant">#202020</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/theme_red</item>
