-Removed the scanner screen. Now the scanner can be run by tapping the fab button on the products page. Holding it will allow to manually enter a code.-Made more changes to the ui

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,4 +3,10 @@
     <style name="SelectedTabTextAppearance" parent="TextAppearance.Design.Tab">
         <item name="android:textColor">@color/theme_red</item>
     </style>
+
+<!-- This fixes dialog so button color is visible-->
+    <style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+    </style>
+
+
 </resources>
