--- a/app/src/main/res/layout/fragment_product_recycler.xml
+++ b/app/src/main/res/layout/fragment_product_recycler.xml
@@ -7,20 +7,7 @@
     android:background="?attr/colorPrimary"
     tools:context=".productRecycler.ProductRecycler">
 
-    <!--    <TextView-->
-    <!--        android:id="@+id/textView2"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginStart="8dp"-->
-    <!--        android:layout_marginTop="8dp"-->
-    <!--        android:fontFamily="@font/poppins"-->
-    <!--        android:text="My Inventory"-->
-    <!--        android:textColor="?attr/colorOnPrimary"-->
-    <!--        android:textSize="24sp"-->
-    <!--        android:textStyle="bold"-->
-    <!--        app:layout_constraintBottom_toTopOf="@+id/productRecycler"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent" />-->
+
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/filter"
@@ -39,13 +26,13 @@
 
     <TextView
         android:id="@+id/inventoryEmptyTextView"
-        android:layout_width="342dp"
-        android:layout_height="63dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="82dp"
         android:fontFamily="@font/poppins"
-        android:text="Looks like your inventory is empty! Scan An item to start..."
+        android:text="Looks like your inventory is empty! Tap the + button to scan a barcode or hold to manually enter the code."
         android:textAlignment="center"
         android:textColor="?attr/colorOnPrimary"
         android:textSize="20sp"
@@ -64,5 +51,17 @@
         android:layoutAnimation="@anim/layout_anim">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/productFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        app:tint="@null"
+        android:src="@drawable/ic_baseline_playlist_add_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
