--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/theme_offwhite"
+    android:background="?attr/colorPrimary"
     android:orientation="vertical"
     tools:context=".statistics.StatisticsFragment">
 
@@ -12,20 +13,26 @@
         android:id="@+id/statTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50sp"
         android:background="@color/theme_green"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/poppins"
         android:text="Statistic Title"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/theme_textblack"
         android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/statsImage"
         android:layout_width="match_parent"
         android:layout_height="318dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/statTitle"
         tools:src="@tools:sample/avatars" />
 
     <TextView
@@ -33,11 +40,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10sp"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/poppins"
         android:text="Statistic Value"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="?attr/colorOnPrimary"
         android:textSize="28sp"
-        android:textStyle="bold" />
-</LinearLayout>
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
