--- a/app/src/main/res/layout/fragment_view_pager_host.xml
+++ b/app/src/main/res/layout/fragment_view_pager_host.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,15 +10,18 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vpHost"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="#D5D0D0"
-        />
+        app:layout_constraintBottom_toTopOf="@+id/gallery"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/gallery"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/theme_green"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:tabIndicator="@android:color/transparent"
-        app:tabSelectedTextAppearance="@style/SelectedTabTextAppearance">
-    </com.google.android.material.tabs.TabLayout>
-</LinearLayout>
+        app:tabSelectedTextAppearance="@style/SelectedTabTextAppearance"></com.google.android.material.tabs.TabLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
