#21 Create a drawer with an appropriate name and icon for the credits screen Created the empty fragment for credits and modified mobile_activity and main_activity to include this fragment, as well in the nav drawer with an icon and name

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,4 +28,9 @@
         android:id="@+id/nav_settings"
         android:name="com.example.arbitragetracker.settings.SettingsFragment"
         android:label="SettingsFragment" />
+    <fragment
+        android:id="@+id/nav_credits"
+        android:name="com.example.arbitragetracker.credits.CreditsFragment"
+        android:label="Credits"
+        tools:layout="@layout/fragment_credits" />
 </navigation>
