--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,5 +18,10 @@
             android:icon="@drawable/ic_baseline_query_stats_24"
             android:title="Statistics"
             />
+        <item
+            android:id="@+id/nav_credits"
+            android:icon="@drawable/ic_baseline_copyright_24"
+            android:title="Credits"
+            />
     </group>
 </menu>
