#24 Add intents which are appropriate for the credits screen Added the code to launch web intents to the documentation pages of the API's used that are shown in the credits screen

--- a/app/src/main/res/layout/fragment_credits.xml
+++ b/app/src/main/res/layout/fragment_credits.xml
@@ -85,7 +85,7 @@
                 android:layout_margin="15sp"
                 android:backgroundTint="@color/theme_green"
                 android:fontFamily="@font/poppins"
-                android:text="BorjaBravo's READMORE Textview Extension"
+                android:text="BorjaBravo's READMORE Textview Extension on GitHub"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
